--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <SCRIPT language="JavaScript">
         var password; 
         var pass1="123"
-        password=prompt('Enter Password',' '); 
+        password=prompt('Type 123 to prove you are not a robot
+                        ',' '); 
         if (password==pass1) 
         
         alert('logged succesfully! Click OK to Enter!'); 
