--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <a id="a2" href="#popup2"><img src="images/empty-product.jpg" alt=""></a>
         </div>
         <div class="card__name">
-            <p>Pertfolia website</p>
+            <p>EMPTY</p>
         </div>
         <div class="card__precis">
 
@@ -107,7 +107,7 @@
             <a id="a3" href="#popup3"><img src="images/empty-product.jpg" alt=""></a>
         </div>
         <div class="card__name">
-            <p>Pertfolia website</p>
+            <p>EMPTY</p>
         </div>
         <div class="card__precis">
 
@@ -121,7 +121,7 @@
             <a id="a4" href="#popup4"><img src="images/empty-product.jpg" alt=""></a>
         </div>
         <div class="card__name">
-            <p>Pertfolia website</p>
+            <p>EMPTY</p>
         </div>
         <div class="card__precis">
 
@@ -151,7 +151,7 @@
             <a id="a6" href="#popup6"><img src="images/empty-product.jpg" alt=""></a>
         </div>
         <div class="card__name">
-            <p>Pertfolia website</p>
+            <p>EMPTY</p>
         </div>
         <div class="card__precis">
 
@@ -164,7 +164,7 @@
             <a id="a7" href="#popup7"><img src="images/empty-product.jpg" alt=""></a>
         </div>
         <div class="card__name">
-            <p>Pertfolia website</p>
+            <p>EMPTY</p>
         </div>
         <div class="card__precis">
 
@@ -178,7 +178,7 @@
             <a id="a8" href="#popup8"><img src="images/empty-product.jpg" alt=""></a>
         </div>
         <div class="card__name">
-            <p>Pertfolia website</p>
+            <p>EMPTY</p>
         </div>
         
 
