--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <form action="https://formspree.io/f/xvojpzer" method="post">
                 <input type="text" id="name" name="اسم المستخدم"  placeholder="YOUR NAME(اسمك)" required>
             <input type="email" id="email" name="ايميل المستخدم"  placeholder="EMAIL ID(ايميلك)" required>
-                <textarea  id="Message"  rows="4" name="مساعد المستخدم" placeholder="do you have any notes ?" required></textarea>
+                <textarea  id="Message"  rows="4" name="مساعد المستخدم" placeholder="do you have any notes ?question ?"></textarea>
             <center>
                 <button  type="submit" class="add-to-cart-btn" href=""> Buy</button>
             </center>
