--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         </div>
         <div class="card__name">
-            <p>Pertfolia website</p>
+            <p>EMPTY</p>
         </div>
 
         <div class="card__precis">
@@ -206,14 +206,14 @@
         <a class="close" href="#">&times;</a>
         <div class="content">
             <strong>
-                <center> Pertfolia website</center>
+                <center> EMPTY</center>
             </strong>
             <span class="price">Price: 15 SAR</span><br>
             <strong>Information:</strong><br> <strong>Made of:</strong> html/css/javascript <br><strong > discription:</strong>tiltable effect profile card          
             <form action="https://formspree.io/f/xvojpzer" method="post">
                 <input type="text" id="name" name="اسم المستخدم"  placeholder="YOUR NAME(اسمك)" required>
             <input type="email" id="email" name="ايميل المستخدم"  placeholder="EMAIL ID(ايميلك)" required>
-                <textarea  id="Message"  rows="4" name="مساعد المستخدم" placeholder="do you have any note ?question ?"></textarea>
+                <textarea  id="Message"  rows="4" name="ملاحظه او سوأل" placeholder="do you have any note ?question ?"></textarea>
             <center>
                 <button  type="submit" class="add-to-cart-btn" href=""> Buy</button>
             </center>
@@ -234,13 +234,14 @@
         <a class="close" href="#">&times;</a>
         <div class="content">
             <strong>
-                <center> Pertfolia website</center>
+                <center> EMPTY</center>
             </strong>
             <strong>Price:</strong> 0<br>
 <strong>Information:</strong><br> <strong>Made of:</strong>  <br><strong > discription:</strong>
             <form action="https://formspree.io/f/xwkdevgq" method="post">
                 <input type="text" id="name" name="اسم المستخدم"  placeholder="YOUR NAME(اسمك)" required>
             <input type="email" id="email" name="ايميل المستخدم"  placeholder="EMAIL ID(ايميلك)" required>
+            <textarea  id="Message"  rows="4" name="ملاحظه او سوأل" placeholder="do you have any note ?question ?"></textarea>
             <center>
                 <button disabled type="submit" class="add-to-cart-btn" href=""> Buy</button>
             </center>
@@ -260,13 +261,14 @@
         <a class="close" href="#">&times;</a>
         <div class="content">
             <strong>
-                <center> Pertfolia website</center>
+                <center> EMPTY</center>
             </strong>
             <strong>Price:</strong> 0<br>
 <strong>Information:</strong><br> <strong>Made of:</strong>  <br><strong > discription:</strong>
             <form action="https://formspree.io/f/xrgwzena" method="post">
                 <input type="text" id="name" name="اسم المستخدم"  placeholder="YOUR NAME(اسمك)" required>
             <input type="email" id="email" name="ايميل المستخدم"  placeholder="EMAIL ID(ايميلك)" required>
+            <textarea  id="Message"  rows="4" name="ملاحظه او سوأل" placeholder="do you have any note ?question ?"></textarea>
             <center>
                 <button disabled type="submit" class="add-to-cart-btn" href=""> Buy</button>
             </center>
@@ -290,13 +292,14 @@
         <a class="close" href="#">&times;</a>
         <div class="content">
             <strong>
-                <center> Pertfolia website</center>
+                <center> EMPTY</center>
             </strong>
             <strong>Price:</strong> 0<br>
 <strong>Information:</strong><br> <strong>Made of:</strong>  <br><strong > discription:</strong>
             <form action="https://formspree.io/f/mbjvrdnz" method="post">
                 <input type="text" id="name" name="اسم المستخدم"  placeholder="YOUR NAME(اسمك)" required>
             <input type="email" id="email" name="ايميل المستخدم"  placeholder="EMAIL ID(ايميلك)" required>
+            <textarea  id="Message"  rows="4" name="ملاحظه او سوأل" placeholder="do you have any note ?question ?"></textarea>
             <center>
                 <button disabled type="submit" class="add-to-cart-btn" href=""> Buy</button>
             </center>
@@ -324,6 +327,7 @@
             <form action="https://formspree.io/f/xnqkajeo"   method="post">
                 <input type="text" id="name" name="اسم المستخدم"  placeholder="YOUR NAME(اسمك)" required>
             <input type="email" id="email" name="ايميل المستخدم"  placeholder="EMAIL ID(ايميلك)" required>
+            <textarea  id="Message"  rows="4" name="ملاحظه او سوأل" placeholder="what do u want to edit on your files , do you have any questoin ?" required></textarea>
             <input type="file" name="files"  required >
             <center>
                 <button  type="submit" class="add-to-cart-btn" href=""> Buy</button>
@@ -343,13 +347,14 @@
         <a class="close" href="#">&times;</a>
         <div class="content">
             <strong>
-                <center> Pertfolia website</center>
+                <center> EMPTY</center>
             </strong>
             <strong>Price:</strong> 0<br>
 <strong>Information:</strong><br> <strong>Made of:</strong>  <br><strong > discription:</strong>
             <form action="https://formspree.io/f/mjvqbgnj" method="post">
                 <input type="text" id="name" name="اسم المستخدم"  placeholder="YOUR NAME(اسمك)" required>
             <input type="email" id="email" name="ايميل المستخدم"  placeholder="EMAIL ID(ايميلك)" required>
+            <textarea  id="Message"  rows="4" name="ملاحظه او سوأل" placeholder="what do u want to edit on your files , do you have any questoin ?" required></textarea>
             <center>
                 <button disabled type="submit" class="add-to-cart-btn" href=""> Buy</button>
             </center>
@@ -369,13 +374,14 @@
         <a class="close" href="#">&times;</a>
         <div class="content">
             <strong>
-                <center> Pertfolia website</center>
+                <center> EMPTY</center>
             </strong>
             <strong>Price:</strong> 0<br>
 <strong>Information:</strong><br> <strong>Made of:</strong> <br><strong > discription:</strong>
             <form action="https://formspree.io/f/xknlwodr" method="post">
                 <input type="text" id="name" name="اسم المستخدم"  placeholder="YOUR NAME(اسمك)" required>
             <input type="email" id="email" name="ايميل المستخدم"  placeholder="EMAIL ID(ايميلك)" required>
+            <textarea  id="Message"  rows="4" name="ملاحظه او سوأل" placeholder="what do u want to edit on your files , do you have any questoin ?" required></textarea>
             <center>
                 <button disabled type="submit" class="add-to-cart-btn" href=""> Buy</button>
             </center>
@@ -399,7 +405,7 @@
         <a class="close" href="#">&times;</a>
         <div class="content">
             <strong>
-                <center> Pertfolia website</center>
+                <center> EMPTY</center>
             </strong>
             <strong>Price:</strong> 0<br>
 <strong>Information:</strong><br> <strong>Made of:</strong>  <br><strong > discription:</strong>
@@ -407,6 +413,7 @@
             <form action="https://formspree.io/f/xpzgaqvp" method="post">
                 <input type="text" id="name" name="اسم المستخدم"  placeholder="YOUR NAME(اسمك)" required>
             <input type="email" id="email" name="ايميل المستخدم"  placeholder="EMAIL ID(ايميلك)" required>
+            <textarea  id="Message"  rows="4" name="ملاحظه او سوأل" placeholder="what do u want to edit on your files , do you have any questoin ?" required></textarea>
             <center>
                 <button disabled type="submit" class="add-to-cart-btn" href=""> Buy</button>
             </center>
