--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <a class="close" href="#">&times;</a>
         <div class="content">
             <strong>
-                <center> EMPTY</center>
+                <center> Pertfolia Website</center>
             </strong>
             <span class="price">Price: 15 SAR</span><br>
             <strong>Information:</strong><br> <strong>Made of:</strong> html/css/javascript <br><strong > discription:</strong>tiltable effect profile card          
@@ -328,6 +328,7 @@
                 <input type="text" id="name" name="اسم المستخدم"  placeholder="YOUR NAME(اسمك)" required>
             <input type="email" id="email" name="ايميل المستخدم"  placeholder="EMAIL ID(ايميلك)" required>
             <textarea  id="Message"  rows="4" name="ملاحظه او سوأل" placeholder="what do u want to edit on your files , do you have any questoin ?" required></textarea>
+            <label for="folder"></label>
             <input type="file" name="files"  required >
             <center>
                 <button  type="submit" class="add-to-cart-btn" href=""> Buy</button>
