--- a/index.html
+++ b/index.html
@@ -324,11 +324,11 @@
             </strong>
             <strong>Price:</strong> 5 SAR<br>
 <strong>Information:</strong><br> <strong>Made of:</strong>we only edit html css files in this service.  <br><strong > discription:</strong>edit any kind of text + styling the text the style you want.
-            <form action="https://formspree.io/f/xnqkajeo"   method="post">
+            <form action="https://formspree.io/f/xnqkajeo"   method="post"  enctype="multipart/form-data">
                 <input type="text" id="name" name="اسم المستخدم"  placeholder="YOUR NAME(اسمك)" required>
             <input type="email" id="email" name="ايميل المستخدم"  placeholder="EMAIL ID(ايميلك)" required>
             <textarea  id="Message"  rows="4" name="ملاحظه او سوأل" placeholder="what do u want to edit on your files , do you have any questoin ?" required></textarea>
-            <label for="folder"></label>
+            
             <input type="file" name="files"  required >
             <center>
                 <button  type="submit" class="add-to-cart-btn" href=""> Buy</button>
