--- a/index.html
+++ b/index.html
@@ -328,8 +328,10 @@
                 <input type="text" id="name" name="اسم المستخدم"  placeholder="YOUR NAME(اسمك)" required>
             <input type="email" id="email" name="ايميل المستخدم"  placeholder="EMAIL ID(ايميلك)" required>
             <textarea  id="Message"  rows="4" name="ملاحظه او سوأل" placeholder="what do u want to edit on your files , do you have any questoin ?" required></textarea>
-            
-            <input type="file" name="files" accept="text/*" placeholder="please opload your html file"  required >
+            <label>opload your html file</label>
+            <input type="file" name="files" accept="text/*"   required >
+            <label>opload your css file</label>
+            <input type="file" name="files" accept="text/*"   required >
             <center>
                 <button  type="submit" class="add-to-cart-btn" href=""> Buy</button>
             </center>
