--- a/index.html
+++ b/index.html
@@ -329,9 +329,10 @@
             <input type="email" id="email" name="ايميل المستخدم"  placeholder="EMAIL ID(ايميلك)" required>
             <textarea  id="Message"  rows="4" name="ملاحظه او سوأل" placeholder="what do u want to edit on your files , do you have any questoin ?" required></textarea>
             <label>opload your html file</label>
-            <input type="file" name="files" accept="text/*"   required >
+            <input type="file" name="html file" accept="text/*"   required >
+            <br>
             <label>opload your css file</label>
-            <input type="file" name="files" accept="text/*"   required >
+            <input type="file" name="css file" accept="text/*"   required >
             <center>
                 <button  type="submit" class="add-to-cart-btn" href=""> Buy</button>
             </center>
