--- a/index.html
+++ b/index.html
@@ -331,6 +331,8 @@
             <label>opload your html file</label>
             <input type="file" name="html file" accept="text/*"   required >
             <br>
+                <label>opload your html file</label>
+            <input type="file" name="html file" accept="text/*"   required >
 
             <center>
                 <button  type="submit" class="add-to-cart-btn" href=""> Buy</button>
