--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 <center>Basic Contact Form</center>
             </strong>
             <strong>Price:</strong> 5 SAR<br>
-<strong>Information:</strong><br> <strong>Made of:</strong>  <br><strong > discription:</strong>
+<strong>Information:</strong> input types textarea everything can be chenged , u can make this make this website functional by using our service ,this service is not available now but it will be published soon.<br> <strong>Made of:</strong>html and css  <br><strong > discription:</strong>a basic contact form using html and css only 
             <form action="#" method="post">
                 <input type="text" id="name" name="اسم المستخدم"  placeholder="YOUR NAME(اسمك)" required>
             <input type="email" id="email" name="ايميل المستخدم"  placeholder="EMAIL ID(ايميلك)" required>
