--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         </div>
         <div class="card__name">
-            <p>EMPTY</p>
+            <p>Tiltable Pertfolia Card</p>
         </div>
 
         <div class="card__precis">
@@ -264,7 +264,7 @@
         <a class="close" href="#">&times;</a>
         <div class="content">
             <strong>
-                <center> Pertfolia Website</center>
+                <center> Tiltable Pertfolia Card</center>
             </strong>
             <span class="price">Price: 15 SAR</span><br>
             <strong>Information:</strong><br> <strong>Made of:</strong> html/css/javascript <br><strong > discription:</strong>tiltable effect profile card          
