--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <a id="a8" href="#popupb2"><img src="images/empty-product.jpg" alt=""></a>
         </div>
         <div class="card__name">
-            <p>EMPTY</p>
+            <p>Simple Full Website Form</p>
         </div>
         
 
@@ -415,10 +415,10 @@
         <a class="close" href="#">&times;</a>
         <div class="content">
             <strong>
-                <center> EMPTY</center>
+                <center>Simple Full Website Form</center>
             </strong>
-            <strong>Price:</strong> 0<br>
-<strong>Information:</strong><br> <strong>Made of:</strong>  <br><strong > discription:</strong>
+            <strong>Price:</strong> 6.99 SAR<br>
+<strong>Information: a free to edit full website form containing navbar,body and a footer.this website is not completely functional ,u can make it functional using one of our services</strong><br> <strong>Made of:</strong>Html and Css  <br><strong > discription:</strong> a simple and stylish website template containing a nav bar
             <form action="#" method="post">
                 <input type="text" id="name" name="اسم المستخدم"  placeholder="YOUR NAME(اسمك)" required>
             <input type="email" id="email" name="ايميل المستخدم"  placeholder="EMAIL ID(ايميلك)" required>
