--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
     <article class="card">
         <div class="card__img">
-            <a id="a8" href="#popupb2"><img src="images/empty-product.jpg" alt=""></a>
+            <a id="a8" href="#popupb2"><img src="images/productb2.png" alt=""></a>
         </div>
         <div class="card__name">
             <p>Simple Full Website Form</p>
