--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
 
     <article class="card">
         <div class="card__img">
-            <a id="a6" href="#popup6"><img src="images/empty-product.jpg" alt=""></a>
+            <a id="a6" href="#popup6"><img src="images/product6.png" alt=""></a>
         </div>
         <div class="card__name">
-            <p>EMPTY</p>
+            <p>Add a NavBar to your Website</p>
         </div>
         <div class="card__precis">
 
@@ -557,12 +557,20 @@
             <strong>
                 <center> EMPTY</center>
             </strong>
-            <strong>Price:</strong> 0<br>
-<strong>Information:</strong><br> <strong>Made of:</strong>  <br><strong > discription:</strong>
+            <strong>Price:</strong>5 SAR<br>
+<strong>Information:</strong>the navber is all customizable u can also add more tabs into the navbar, u can take the navbar to the next level and add a search bar, if u want to make to make the search bar functionalu can use one of our services<br> <strong>Made of: Html and Css</strong>  <br><strong > discription:</strong> a basic editable navbar that can be added to your website
             <form action="https://formspree.io/f/mjvqbgnj" method="post">
                 <input type="text" id="name" name="اسم المستخدم"  placeholder="YOUR NAME(اسمك)" required>
             <input type="email" id="email" name="ايميل المستخدم"  placeholder="EMAIL ID(ايميلك)" required>
             <textarea  id="Message"  rows="4" name="ملاحظه او سوأل" placeholder="what do u want to edit on your files , do you have any questoin ?" required></textarea>
+
+            <label>opload your html file</label>
+            <input type="file" name="html file" accept="text/*"   required >
+            <br>
+
+            <label>opload your css file</label>
+            <input type="file" name="css file" accept="text/*"   required >
+
             <center>
                 <button disabled type="submit" class="add-to-cart-btn" href=""> Buy</button>
             </center>
