--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                 <center> EMPTY</center>
             </strong>
             <strong>Price:</strong>5 SAR<br>
-<strong>Information:</strong>the navber is all customizable u can also add more tabs into the navbar, u can take the navbar to the next level and add a search bar, if u want to make to make the search bar functionalu can use one of our services<br> <strong>Made of: Html and Css</strong>  <br><strong > discription:</strong> a basic editable navbar that can be added to your website
+<strong>Information:</strong>the navber is all customizable u can also add more tabs into the navbar, u can take the navbar to the next level and add a search bar, if u want to make to make the search bar functional u can use one of our services<br> <strong>Made of:  </strong> Html and Css <br><strong > discription:</strong> a basic editable navbar that can be added to your website
             <form action="https://formspree.io/f/mjvqbgnj" method="post">
                 <input type="text" id="name" name="اسم المستخدم"  placeholder="YOUR NAME(اسمك)" required>
             <input type="email" id="email" name="ايميل المستخدم"  placeholder="EMAIL ID(ايميلك)" required>
