--- a/index.html
+++ b/index.html
@@ -551,11 +551,11 @@
 <div id="popup6" class="overlay">
 
     <div class="popup">
-        <video controls src=""></video>
+        <video controls src="images/add basic nav bar.mp4"></video>
         <a class="close" href="#">&times;</a>
         <div class="content">
             <strong>
-                <center> EMPTY</center>
+                <center> Add a NavBar to your Website</center>
             </strong>
             <strong>Price:</strong>5 SAR<br>
 <strong>Information:</strong>the navber is all customizable u can also add more tabs into the navbar, u can take the navbar to the next level and add a search bar, if u want to make to make the search bar functional u can use one of our services<br> <strong>Made of:  </strong> Html and Css <br><strong > discription:</strong> a basic editable navbar that can be added to your website
